fix CSS styling on the overlay script so it doesnt stretch

--- a/fax-logo/ui/style.css
+++ b/fax-logo/ui/style.css
@@ -1,39 +1,12 @@
 /*-------------- LOGO DISPLAY - Made By FAXES -------------- */
 
 #logo .contenair{
-	position:absolute;
-	z-index: 2;    
 	width: 99%;									
 	height:99%;
-	background-image: url('img/logo.png');					
-	background-size: 100% 100%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	opacity: 1.0; 
-	padding: none; 									
-    
+	background-image: url('img/logo.png');
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-position: 47% 0;
 }
-	
-#logo .spacer{
-	z-index: 2;
-	width: 100%;
-	height: 120px;
-	margin: 0;  
-	text-align: left;
-  background: transparent;	
-}
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
